added bottom 3-items categories to index page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,9 @@
       window.firstCatImgURL = "<%= image_url('firstCat.jpg') %>"
       window.secondCatImgURL = "<%= image_url('secondCat.jpg') %>"
       window.thirdCatImgURL = "<%= image_url('thirdCat.jpg') %>"
+      window.fourthCatImgURL = "<%= image_url('free_shipping.gif') %>"
+      window.fifthCatImgURL = "<%= image_url('mother_of_charms.jpg') %>"
+      window.sixthCatImgURL = "<%= image_url('gift_guide.png') %>"
       window.giftBannerURL = "<%= image_url('banners/gifts_banner.jpg') %>"
       window.funBannerURL = "<%= image_url('banners/fun_banner.jpg') %>"
       window.homeBannerURL = "<%= image_url('banners/home_banner.jpg') %>"
