--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -93,11 +93,29 @@
 }
 
 .home-three-cat {
-  div {
+  div:nth-child(odd) {
     a {
       img {
         width: 100%;
         height: 100%;
+        box-sizing: border-box;
+      }
+    }
+  }
+
+  div:nth-child(even) {
+    a {
+      img {
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+      }
+    }
+  }
+
+  div {
+    a {
+      img {
         border: 1px solid $beige;
         cursor: pointer;
       }
@@ -108,6 +126,7 @@
         font-family: $playfair-serif;
         text-align: center;
         cursor: pointer;
+        height: 30px;
       }
       h3 {
         font-size: 14px;
@@ -116,6 +135,7 @@
         text-decoration-color: $dark-green;
         text-align: center;
         cursor: pointer;
+        height: 20px;
       }
       h3:hover {
         background-color: $green;
@@ -128,10 +148,100 @@
       justify-content: center;
       margin-left: auto;
       margin-right: auto;
+      overflow: hidden;
+      box-sizing: border-box;
     }
     display: flex;
     flex-direction: column;
     padding-bottom: 30px;
+  }
+  display: flex;
+  flex-direction: row;
+}
+
+.home-three-cat-2 {
+  div:nth-child(odd) {
+    div{
+      display: flex;
+      justify-content: center;
+      width: 100%;
+    }
+    a {
+      div {
+        a{
+          width: 100px;
+          margin-left: auto;
+          margin-right: auto;
+        }
+      }
+      img {
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+      }
+      margin-left: 0;
+      margin-right: 0;
+    }
+    width: calc(100% / 3);
+  }
+
+  div:nth-child(even) {
+    div{
+      display: flex;
+      justify-content: center;
+      width: 100%;
+    }
+    a {
+      img {
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+      }
+      margin-left: auto;
+      margin-right: auto;
+    }
+    width: calc(100% / 3);
+  }
+
+  div {
+    a {
+      img {
+        border: 1px solid $beige;
+        cursor: pointer;
+      }
+      h2 {
+        display: flex;
+        justify-content: center;
+        font-size: 24px;
+        font-family: $playfair-serif;
+        text-align: center;
+        cursor: pointer;
+        height: 30px;
+      }
+      h3 {
+        font-size: 14px;
+        font-family: $open-sans;
+        text-decoration: underline;
+        text-decoration-color: $dark-green;
+        text-align: center;
+        cursor: pointer;
+        height: 20px;
+      }
+      h3:hover {
+        background-color: $green;
+      }
+      text-decoration: none;
+      color: $black;
+      padding: 5px;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      overflow: hidden;
+      box-sizing: border-box;
+    }
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 20px;
   }
   display: flex;
   flex-direction: row;
@@ -247,7 +357,7 @@
   width: calc(100% / 5);
 }
 
-@media all and (max-width: 1200px) {
+@media all and (max-width: 1250px) {
   .background-products {
     width: 100%;
   }
@@ -297,62 +407,75 @@
       .earth-links{
         width: 100%;
         height: 160px;
-        margin: 0;
+        margin-left: 0;
+        margin-right: 0;
+        margin-bottom: 0;
+        margin-top: 15px;
       }
       flex-direction: column;
       border: none;
     }
     padding: 0;
     background-color: white;
-    margin: 15px auto;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 0;
+    margin-bottom: 10px;
     width: calc(100% - 10px);
     display: flex;
     justify-content: center;
     box-sizing: border-box;
   }
 
-  .home-three-cat {
+  .home-three-cat,
+  .home-three-cat-2 {
     div:nth-child(odd) {
+      a {
+        width: 50%;
+        padding-right: 0;
+        padding-bottom: 0;
+      }
       div {
         a {
-          img {
-            width: 50vw;
-            height: 50vw;
-          }
           flex-direction: column;
           padding-bottom: 0;
           padding-top: 15px;
+          width: auto;
         }
         display: flex;
         flex-direction: column;
         justify-content: center;
-        width: 100%;
+        width: 50%;
         border: none;
       }
       flex-direction: row;
       padding-bottom: 0px;
       border-bottom: 1px solid $beige;
+      width: 100%;
     }
     div:nth-child(even) {
+      a {
+        width: 50%;
+        padding-left: 0;
+        padding-bottom: 0;
+      }
       div {
         a {
-          img {
-            width: 50vw;
-            height: 50vw;
-          }
           flex-direction: column;
           padding-bottom: 0;
           padding-top: 15px;
+          width: auto;
         }
         display: flex;
         flex-direction: column;
         justify-content: center;
-        width: 100%;
+        width: 50%;
         border: none;
       }
       flex-direction: row-reverse;
       padding-bottom: 0px;
       border-bottom: 1px solid $beige;
+      width: 100%;
     }
     flex-direction: column;
     background-color: white;
@@ -364,7 +487,6 @@
     background-color: $beige;
     padding-top: 10px;
     margin-top: 76px;
-    padding-bottom: 15px;
   }
 
   .links-nav hr, .links-nav div:not(:first-of-type) {
