--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -126,7 +126,7 @@
         font-family: $playfair-serif;
         text-align: center;
         cursor: pointer;
-        height: 30px;
+        line-height: 1.5;
       }
       h3 {
         font-size: 14px;
@@ -135,7 +135,7 @@
         text-decoration-color: $dark-green;
         text-align: center;
         cursor: pointer;
-        height: 20px;
+        line-height: 1.5;
       }
       h3:hover {
         background-color: $green;
@@ -216,7 +216,7 @@
         font-family: $playfair-serif;
         text-align: center;
         cursor: pointer;
-        height: 30px;
+        line-height: 1.5;
       }
       h3 {
         font-size: 14px;
@@ -225,7 +225,7 @@
         text-decoration-color: $dark-green;
         text-align: center;
         cursor: pointer;
-        height: 20px;
+        line-height: 1.5;
       }
       h3:hover {
         background-color: $green;
@@ -439,7 +439,6 @@
         a {
           flex-direction: column;
           padding-bottom: 0;
-          padding-top: 15px;
           width: auto;
         }
         display: flex;
@@ -463,7 +462,6 @@
         a {
           flex-direction: column;
           padding-bottom: 0;
-          padding-top: 15px;
           width: auto;
         }
         display: flex;
