--- a/app/assets/stylesheets/account.scss
+++ b/app/assets/stylesheets/account.scss
@@ -4,12 +4,14 @@
   color: red;
   font-style: italic;
   font-family: $open-sans;
-  font-size: 14px;
+  font-size: 12px;
   width: 300px;
   line-height: 1.5;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   margin: auto;
+  list-style-type: square;
 }
 
 .account-info {
@@ -577,6 +579,10 @@
 }
 
 @media all and (max-width: 640px) {
+  .user-errors {
+    width: calc(100% * 2 / 3);
+  }
+
   .order-page {
     padding-top: 10px;
     margin-top: 67px;
