--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,6 +1,7 @@
 $black: #161616f3;
 $white: #fff;
 $beige: #E8E4DF;
+$medium-beige: #F7F2ED;
 $dark-beige: #BCAA95;
 $light-gray: #DBDBDB;
 $green: #D9EBEB;
