--- a/app/assets/stylesheets/wishes.scss
+++ b/app/assets/stylesheets/wishes.scss
@@ -27,6 +27,78 @@
 
   .wishes-body {
     .wishes-body-inner {
+      .wishes-body-empty {
+        h1 {
+          display: flex;
+          justify-content: center;
+          font-size: 24px;
+          font-family: $playfair-serif;
+          margin-top: 50px;
+          margin-bottom: 20px;
+          text-align: center;
+        }
+        h2 {
+          display: flex;
+          justify-content: center;
+          font-size: 18px;
+          font-family: $playfair-serif;
+          margin-bottom: 20px;
+          text-align: center;
+        }
+        h3 {
+          font-size: 16px;
+          font-family: $open-sans;
+          display: flex;
+          justify-content: center;
+          margin-bottom: 20px;
+          text-align: center;
+        }
+        div {
+          i {
+            display: flex;
+            justify-content: center;
+            height: 74px;
+            width: 74px;
+            background-image: image-url('heart-offwhite.gif');
+            background-size: 100%;
+            display: inline-block;
+            background-repeat: no-repeat;
+            vertical-align: top;
+            overflow: hidden;
+            padding: 0px;
+            margin-bottom: 40px;
+            margin-top: 10px;
+          }
+          a{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 18px;
+            font-family: $open-sans;
+            text-align: center;
+            text-decoration: none;
+            color: $dark-sea-green;
+            padding: 30px 0;
+            width: calc(1000px / 4);
+            margin: 5px;
+            background-image: image-url('watercolorBG.jpg');
+            background-repeat: no-repeat;
+            background-size: 300%;
+            background-position-x: center;
+            background-position-y: center;
+            border: 1px solid $dark-beige;
+            box-sizing: border-box;
+            box-shadow: 0 0 6px -2px grey;
+          }
+          display: flex;
+          flex-direction: row;
+          justify-content: center;
+        }
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 300px;
+      }
+
       ul {
         .wishes-item {
           a {
@@ -129,13 +201,29 @@
     display: flex;
     justify-content: center;
     border-top: 1px solid $dark-sea-green;
-    background-color: $beige;
+    background-color: $medium-beige;
     padding-bottom: 60px;
   }
 }
 
 @media all and (max-width: 1050px) {
   .wishes {
+    .wishes-body {
+      .wishes-body-inner {
+        .wishes-body-empty {
+          h3 {
+            margin-left: 30px;
+            margin-right: 30px;
+            line-height: 1.5;
+          }
+          div {
+            a{
+              width: calc(100% / 4);
+            }
+          }
+        }
+      }
+    }
     width: 100%;
   }
 }
@@ -158,11 +246,23 @@
   .wishes {
     .wishes-body {
       .wishes-body-inner {
+        .wishes-body-empty {
+          div {
+            i {
+              margin-left: auto;
+              margin-right: auto;
+            }
+            a{
+              margin-left: auto;
+              margin-right: auto;
+              width: calc(100% - 10px);
+            }
+            flex-direction: column;
+          }
+        }
         ul {
           .wishes-item{
             a {
-              img {
-              }
               h2 {
                 display: flex;
                 justify-content: center;
@@ -170,14 +270,12 @@
               }
               padding: 10px;
               margin: 0;
-              
             }
             span {
               display: flex;
               justify-content: center;
               font-size: 16px;
             }
-
             div {
               button {
                 display: flex;
@@ -217,6 +315,3 @@
     margin-top: 75px;
   }
 }
-
-
-          
