--- a/app/assets/stylesheets/account.scss
+++ b/app/assets/stylesheets/account.scss
@@ -2,7 +2,7 @@
 
 .user-errors {
   li {
-    list-style: square;
+    list-style: square inside;
     padding: 6px;
     margin: auto;
   }
@@ -14,7 +14,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  list-style: square;
+  list-style: square inside;
   margin: auto;
 }
 
