--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -4,6 +4,7 @@ $beige: #E8E4DF;
 $medium-beige: #F7F2ED;
 $dark-beige: #BCAA95;
 $light-gray: #DBDBDB;
+$dark-gray: #767676;
 $green: #D9EBEB;
 $medium-green: #A2D5D4;
 $dark-green: #0C8346;
