updated db seed file to include wishes and reviews

--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -115,6 +115,7 @@
               .review-details-header-inner {
                 div {
                   h1 {
+                    min-width: 40px;
                     font-size: 20px;
                     font-family: $playfair-serif;
                     padding-bottom: 10px;
